tests/errors/runtime.FileNotFound.1.res
══╡ System Error ╞════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  File not found: 
      *.art

  ┃ File: tests/errors/runtime.FileNotFound.1.art
  ┃ Line: 0
  ┃ 
  ┃    1 ║  array "*.art"
  ┃    2 ║